[package]
authors = ["Chris Bruce <chris@blockjoy.com>"]
categories = ["cryptography::cryptocurrencies"]
description = "A high performance API for managing pending transaction on the helium network."
edition = "2021"
homepage = "https://github.com/blockjoy/helium-txn-gateway/"
keywords = ["helium", "blockjoy", "api", "blockchain", "cryptocurrency"]
license = "Apache-2.0"
license-file = "LICENSE"
name = "helium-txn-gateway"
readme = "README.md"
repository = "https://github.com/blockjoy/helium-txn-gateway/"
version = "0.1.0"

[dependencies]
axum = "0.5"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
tower = "0.4.12"
tower-http = {version = "0.2.0", features = ["add-extension", "trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
